# react-native-bignumber

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  package.json  react-native-bignumber.podspec  react-native.config.js  tsconfig.json
.github/workflows/: build-android.yml  build-ios.yml  validate-android.yml  validate-js.yml
BigNumberExample/: App.tsx  app.json  babel.config.js  package.json
BigNumberExample/android/: settings.gradle
BigNumberExample/ios/: Podfile
BigNumberExample/ios/BigNumberExample/: Info.plist
BigNumberExample/ios/BigNumberExample.xcodeproj/xcshareddata/xcschemes/: BigNumberExample.xcscheme
BigNumberExample/ios/BigNumberExample.xcworkspace/: contents.xcworkspacedata
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/bignumber/: BigNumberModule.java
android/src/main/java/com/reactnativebignumber/: BigNumberModule.java  BigNumberPackage.java
config/: tsconfig.json
cpp/: BigNumberHostObject.cpp  BigNumberHostObject.h  MGBigNumberHostObject.cpp  MGBigNumberHostObject.h
cpp/BigNumber/: BigNumber.cpp  BigNumber.h  MGBigNumber.cpp  MGBigNumber.h  MGModContext.cpp  MGModContext.h  MGRedBigNum.cpp  MGRedBigNum.h  ModContext.cpp  ModContext.h  RedBigNum.cpp  RedBigNum.h
cpp/JSI Utils/: JSIMacros.h  MGJSIMacros.h  MGSmartHostObject.cpp  MGSmartHostObject.h  MGThreadAwareHostObject.cpp  MGThreadAwareHostObject.h  SmartHostObject.h  ThreadAwareHostObject.h  TypedArray.cpp  TypedArray.h
cpp/Utils/: BigNumHelper.cpp  BigNumHelper.h  DispatchQueue.h  MGBigNumHelper.cpp  MGBigNumHelper.h  MGDispatchQueue.cpp  MGDispatchQueue.h
example/: .gitignore  Gemfile  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
example/android/: build.gradle  crash-log.txt  gradlew  gradlew.bat  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/: File.swift  Podfile
example/ios/BigNumberExample/: AppDelegate.m  AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/BigNumberExample.xcodeproj/: project.pbxproj
example/ios/BigNumberExample.xcodeproj/xcshareddata/xcschemes/: BigNumberExample.xcscheme
example/ios/BigNumberExample.xcworkspace/: contents.xcworkspacedata
example/ios/BigNumberExampleTests/: BigNumberExampleTests.m
example/patches/: elliptic+6.5.4.patch  elliptic+6.6.1.patch
example/src/: App.tsx  Benchmarks.ts  MochaSetup.ts  Tests.tsx
example/src/Testing/: MochaRNAdapter.ts  MochaSetup.ts  TestList.ts
example/src/Testing/bn-tests/: README.md  arithmetic-test.js  binary-test.js  constructor-test.js  fixtures.js  res-test.js  utils-test.js
example/src/Testing/elliptic-tests/: curves.ts
example/src/bn-elliptic/: package.json
example/src/bn-elliptic/lib/elliptic/: curves.js  utils.js
example/src/bn-tests/: arithmetic-test.js  constructor-test.js  utils-test.js
example/src/components/: Button.tsx  CorrectResultItem.tsx  IncorrectResultItem.tsx  Indentator.tsx  Suite.tsx  TestItem.tsx
example/src/navigators/: Root.tsx
example/src/navigators/children/Entry/: Entry.tsx
example/src/navigators/children/TestingScreen/: TestingScreen.tsx
ios/: BigNumberModule.h  BigNumberModule.mm
ios/BigNumber.xcodeproj/: project.pbxproj
lib/commonjs/: BigNumber.js  BigNumber.js.map  index.js  index.js.map
lib/commonjs/NativeBigNumber/: NativeBigNumber.js  NativeBigNumber.js.map
lib/module/: BigNumber.js  BigNumber.js.map  index.js  index.js.map
lib/module/NativeBigNumber/: NativeBigNumber.js  NativeBigNumber.js.map
lib/typescript/: BigNumber.d.ts
lib/typescript/NativeBigNumber/: NativeBigNumber.d.ts
src/: BigNumber.ts  index.ts
src/NativeBigNumber/: NativeBigNumber.ts
(+18 files in other folders)
